fix: page title text align

--- a/src/sass/blocks/page-main.scss
+++ b/src/sass/blocks/page-main.scss
@@ -1,6 +1,7 @@
 .page-main__title {
     margin-top: 15px;
     margin-bottom: 25px;
+    text-align: left;
 }
 
 .page-main__inner {
@@ -33,7 +34,7 @@
     }
 
     .page-main__inner {
-        max-width: $tablet-width;
+        // max-width: $tablet-width;
         margin: 0 auto;
         padding: 0 30px;
     }
